--- a/test/test_services/tfm_core_test/manifest.yaml
+++ b/test/test_services/tfm_core_test/manifest.yaml
@@ -45,7 +45,7 @@
       "minor_policy": "strict"
     }
   ],
-  "tfm_linker_pattern": {
+  "linker_pattern": {
     "object_list": [
       "*tfm_ss_core_test.*"
     ]
