--- a/test/test_services/tfm_ipc_client/tfm_ipc_client_partition.yaml
+++ b/test/test_services/tfm_ipc_client/tfm_ipc_client_partition.yaml
@@ -57,7 +57,7 @@
       "minor_policy": "STRICT"
     }
   ],
-  "tfm_linker_pattern": {
+  "linker_pattern": {
     "object_list": [
       "*ipc_client_test.*"
     ]
