--- a/test/test_services/tfm_ipc_service/tfm_ipc_service_partition.yaml
+++ b/test/test_services/tfm_ipc_service/tfm_ipc_service_partition.yaml
@@ -49,7 +49,7 @@
       "minor_policy": "STRICT"
     }
   ],
-  "tfm_linker_pattern": {
+  "linker_pattern": {
     "object_list": [
       "*ipc_service_test.*"
     ]
