Build: Don't create empty bss sections
If a section is empty, and '.' is aligned in the section, the gcc linker
returns a warning.

To avoid this warning add 4 bytes data to the partition bss sections if
they are empty.

Change-Id: I5b24f07927855fd0b2468b1c17ec1a06f170962a
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/platform/ext/common/gcc/tfm_common_s.ld.template
+++ b/platform/ext/common/gcc/tfm_common_s.ld.template
@@ -379,6 +379,7 @@ SECTIONS
 
     .{{manifest.manifest.name}}_BSS : ALIGN(32)
     {
+        start_of_{{manifest.manifest.name}} = .;
     {% if manifest.manifest.tfm_linker_pattern.library_list %}
         {% for pattern in manifest.manifest.tfm_linker_pattern.library_list %}
         {{pattern}}:*(.bss*)
@@ -391,6 +392,7 @@ SECTIONS
         {{pattern}}(COMMON)
         {% endfor %}
     {% endif %}
+        . += (. - start_of_{{manifest.manifest.name}}) ? 0 : 4;
         . = ALIGN(32);
     } > RAM AT> RAM
     Image$${{manifest.manifest.name}}_DATA$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_BSS);
@@ -455,6 +457,7 @@ SECTIONS
 
     .{{manifest.manifest.name}}_BSS : ALIGN(32)
     {
+        start_of_{{manifest.manifest.name}} = .;
     {% if manifest.manifest.tfm_linker_pattern.library_list %}
         {% for pattern in manifest.manifest.tfm_linker_pattern.library_list %}
         {{pattern}}:*(.bss*)
@@ -467,6 +470,7 @@ SECTIONS
         {{pattern}}(COMMON)
         {% endfor %}
     {% endif %}
+        . += (. - start_of_{{manifest.manifest.name}}) ? 0 : 4;
         . = ALIGN(32);
     } > RAM AT> RAM
     Image$${{manifest.manifest.name}}_DATA$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_BSS);
