Doc: Updated Document paths
This patch modifes the documentation
in the following ways:

* Contributing, glossary and maintainers
  files, are moved into the
  the documentation directory
* The table of contents in index.rst.in are
  updated accordingly
* Coding_guide, contributing, maintainers and
  readme documetns, are updated accordingly

Change-Id: I40ea47f7f154142f1f02f4492ad53c3533109bb0
Signed-off-by: Galanakis, Minos <minos.galanakis@arm.com>

--- a/docs/index.rst.in
+++ b/docs/index.rst.in
@@ -5,7 +5,7 @@
    before the documentation is built.
    This file will be copied to the top level and thus please use relative paths
    as if this file would be in <TFM_ROOT_DIR>.
-   
+
    The values between @ characters will be filled in by CMake.
 
 
@@ -17,10 +17,10 @@ Welcome to TF-M's documentation!
     :glob:
     :hidden:
 
-    contributing
+    docs/contributing
     docs/dco
-    glossary
-    maintainers
+    docs/glossary
+    docs/maintainers
     docs/user_guides/tfm_sw_requirement
     docs/user_guides/tfm_build_instruction
     docs/coding_guide
