--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -76,6 +76,7 @@ else()
 endif()
 
 set(ENABLE_SECURE_STORAGE_SERVICE_TESTS TRUE)
+set(ENABLE_INTERNAL_TRUSTED_STORAGE_SERVICE_TESTS TRUE)
 set(ENABLE_AUDIT_LOGGING_SERVICE_TESTS TRUE)
 set(ENABLE_CRYPTO_SERVICE_TESTS TRUE)
 set(ENABLE_INVERT_SERVICE_TESTS TRUE)
