Core: Remove tfm_irq_signal_defs.h
Remove "tfm_irq_signal_defs.h" which used to include the IRQ signal
definition for SPM and add the generate manifest header file to the
related file directly.

Change-Id: I80fe339271aa8634b8500050bcecc59de415ba86
Signed-off-by: Edison Ai <edison.ai@arm.com>

--- a/secure_fw/core/ipc/tfm_secure_irq_handlers_ipc.inc.template
+++ b/secure_fw/core/ipc/tfm_secure_irq_handlers_ipc.inc.template
@@ -6,12 +6,14 @@
  */
 
 {{utilities.donotedit_warning}}
+
+{% for header in utilities.manifest_header_list %}
+#include "{{header}}"
+{% endfor %}
+#include "cmsis_compiler.h"
 {% macro _irq_record(partition_name, signal, line, priority) -%}
 { {{ partition_name }}_ID, {{ signal }}, {{ line }}, {{ priority }} },
 {%- endmacro %}
-
-#include "cmsis_compiler.h"
-#include "tfm_irq_signal_defs.h"
 
 /* Definitions of the signals of the IRQs (if any) */
 const struct tfm_core_irq_signal_data_t tfm_core_irq_signals[] = {
