Platform: Remove isolation level 3
Remove isolation level 3 related functions and configure from library
model.

Change-Id: I988cee997861f8c682ea5f218800a36be37dc674
Signed-off-by: Edison Ai <edison.ai@arm.com>

--- a/platform/ext/common/gcc/tfm_common_s.ld.template
+++ b/platform/ext/common/gcc/tfm_common_s.ld.template
@@ -89,13 +89,8 @@ SECTIONS
         LONG (ADDR(.TFM_BSS))
         LONG (SIZEOF(.TFM_BSS))
 #if !defined(TFM_PSA_API)
-#if TFM_LVL == 1
         LONG (ADDR(.TFM_SECURE_STACK))
         LONG (SIZEOF(.TFM_SECURE_STACK))
-#else /* TFM_LVL == 1 */
-        LONG (ADDR(.TFM_UNPRIV_BSS))
-        LONG (SIZEOF(.TFM_UNPRIV_BSS))
-#endif /* TFM_LVL == 1 */
 #endif /* !defined(TFM_PSA_API) */
 {% for manifest in manifests %}
     {% if manifest.attr.conditional %}
@@ -103,7 +98,7 @@ SECTIONS
     {% endif %}
         LONG (ADDR(.{{manifest.manifest.name}}_BSS))
         LONG (SIZEOF(.{{manifest.manifest.name}}_BSS))
-#if defined(TFM_PSA_API) || (TFM_LVL != 1)
+#if defined(TFM_PSA_API)
         LONG (ADDR(.{{manifest.manifest.name}}_STACK))
         LONG (SIZEOF(.{{manifest.manifest.name}}_STACK))
 #endif
@@ -402,22 +397,10 @@ SECTIONS
     Image$${{manifest.manifest.name}}_DATA$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_BSS) + SIZEOF(.{{manifest.manifest.name}}_BSS);
 
     {% if manifest.attr.tfm_partition_ipc %}
-#if defined (TFM_PSA_API) || (TFM_LVL != 1)
+#if defined (TFM_PSA_API)
     .{{manifest.manifest.name}}_STACK : ALIGN(128)
     {
         . += {{manifest.manifest.stack_size}};
-    } > RAM
-    Image$${{manifest.manifest.name}}_STACK$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_STACK);
-    Image$${{manifest.manifest.name}}_STACK$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_STACK) + SIZEOF(.{{manifest.manifest.name}}_STACK);
-#endif
-    {% else %}
-#if defined (TFM_PSA_API) || (TFM_LVL != 1)
-    .{{manifest.manifest.name}}_STACK : ALIGN(128)
-    {
-        {# Note: Don't allocate stack for partition when using TFM_PSA_API if tfm_partition_ipc is false #}
-#if !defined(TFM_PSA_API)
-        . += {{manifest.manifest.stack_size}};
-#endif
     } > RAM
     Image$${{manifest.manifest.name}}_STACK$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_STACK);
     Image$${{manifest.manifest.name}}_STACK$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_STACK) + SIZEOF(.{{manifest.manifest.name}}_STACK);
@@ -482,22 +465,10 @@ SECTIONS
     Image$${{manifest.manifest.name}}_DATA$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_BSS) + SIZEOF(.{{manifest.manifest.name}}_BSS);
 
     {% if manifest.attr.tfm_partition_ipc %}
-#if defined (TFM_PSA_API) || (TFM_LVL != 1)
+#if defined (TFM_PSA_API)
     .{{manifest.manifest.name}}_STACK : ALIGN(128)
     {
         . += {{manifest.manifest.stack_size}};
-    } > RAM
-    Image$${{manifest.manifest.name}}_STACK$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_STACK);
-    Image$${{manifest.manifest.name}}_STACK$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_STACK) + SIZEOF(.{{manifest.manifest.name}}_STACK);
-#endif
-    {% else %}
-#if defined (TFM_PSA_API) || (TFM_LVL != 1)
-    .{{manifest.manifest.name}}_STACK : ALIGN(128)
-    {
-        {# Note: Don't allocate stack for partition when using TFM_PSA_API if tfm_partition_ipc is false #}
-#if !defined(TFM_PSA_API)
-        . += {{manifest.manifest.stack_size}};
-#endif
     } > RAM
     Image$${{manifest.manifest.name}}_STACK$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_STACK);
     Image$${{manifest.manifest.name}}_STACK$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_STACK) + SIZEOF(.{{manifest.manifest.name}}_STACK);
