--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -138,10 +138,10 @@ LR_CODE S_CODE_START {
         .ANY (+RW +ZI)
     }
 
-#if (TFM_LVL == 1) && !defined(TFM_PSA_API)
+#if !defined(TFM_PSA_API)
     TFM_SECURE_STACK +0 ALIGN 128 EMPTY 0x2000 {
     }
-#endif /* (TFM_LVL == 1) && !defined(TFM_PSA_API) */
+#endif /* !defined(TFM_PSA_API) */
 
     TFM_UNPRIV_DATA +0 ALIGN 32 {
         tfm_spm_services.o (+RW +ZI)
@@ -187,16 +187,13 @@ LR_CODE S_CODE_START {
     }
 
     {% if manifest.attr.tfm_partition_ipc %}
-#if defined (TFM_PSA_API) || (TFM_LVL != 1)
+#if defined (TFM_PSA_API)
     {{manifest.manifest.name}}_STACK +0 ALIGN 128 EMPTY {{manifest.manifest.stack_size}} {
     }
 #endif
     {% else %}
 #if defined (TFM_PSA_API)
     {{manifest.manifest.name}}_STACK +0 ALIGN 128 EMPTY 0 {
-    }
-#elif TFM_LVL != 1
-    {{manifest.manifest.name}}_STACK +0 ALIGN 128 EMPTY {{manifest.manifest.stack_size}} {
     }
 #endif
     {% endif %}
@@ -242,7 +239,7 @@ LR_CODE S_CODE_START {
     }
 
     {% if manifest.attr.tfm_partition_ipc %}
-#if defined (TFM_PSA_API) || (TFM_LVL != 1)
+#if defined (TFM_PSA_API)
     {{manifest.manifest.name}}_STACK +0 ALIGN 128 EMPTY {{manifest.manifest.stack_size}} {
     }
 #endif
@@ -250,10 +247,6 @@ LR_CODE S_CODE_START {
 #if defined (TFM_PSA_API)
     {{manifest.manifest.name}}_STACK +0 ALIGN 128 EMPTY 0 {
     }
-#elif TFM_LVL != 1
-    {{manifest.manifest.name}}_STACK +0 ALIGN 128 EMPTY {{manifest.manifest.stack_size}} {
-    }
-#endif
     {% endif %}
     {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
