Core: Separate library code from spm_api.c file
- Moves library-model-only APIs into another file spm_api_func.c.
- Separates spm code into 3 parts: for library model (func), IPC model
  (ipc) and common.

Change-Id: I35bc43c21415e89c1f353a4c798aa3d8f69ec168
Signed-off-by: Mingyang Sun <mingyang.sun@arm.com>

--- a/secure_fw/services/tfm_spm_db.inc.template
+++ b/secure_fw/services/tfm_spm_db.inc.template
@@ -100,7 +100,9 @@ static uint32_t ctx_stack_{{manifest.manifest.name}}[
 struct spm_partition_desc_t partition_list [] =
 {
     {{'{{0}}'}}, /* placeholder for Non-secure internal partition */
+#ifndef TFM_PSA_API
     {{'{{0}}'}}, /* placeholder for TF-M Core internal partition */
+#endif /* !ifndefined(TFM_PSA_API) */
 
 {% for manifest in manifests %}
     /* -----------------------------------------------------------------------*/
