Test/App: Rename os_wrapper header and implementation files
This patch moves os_wrapper.h from test to interface because it will
be used for ns interfaces as well.
And renames the os_wrapper_cmsis_rtos.c to os_wrapper_cmsis_rtos_v2.c
to precisely indicate it is a CMSIS-RTOS v2 implementation.

Change-Id: I2deb56a23caa66eeb9f4f54000b0db204acdc2ff
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -50,7 +50,7 @@ set(NS_APP_SRC "${CMSIS_5_DIR}/CMSIS/RTOS2/RTX/Config/RTX_Config.c"
 	"${CMSIS_5_DIR}/CMSIS/RTOS2/RTX/Source/rtx_lib.c"
 	"${APP_DIR}/main_ns.c"
 	"${APP_DIR}/tfm_integ_test.c"
-	"${APP_DIR}/os_wrapper_cmsis_rtos.c"
+	"${APP_DIR}/os_wrapper_cmsis_rtos_v2.c"
 	"${INTERFACE_DIR}/src/tfm_sst_api.c"
 	"${INTERFACE_DIR}/src/tfm_crypto_api.c"
 	"${INTERFACE_DIR}/src/tfm_initial_attestation_api.c"
