--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -114,5 +114,12 @@ install(TARGETS tfm_non_secure_tests
 		DESTINATION export/tfm/test/lib
 		PUBLIC_HEADER DESTINATION export/tfm/test/inc)
 
+if(ENABLE_SECURE_STORAGE_SERVICE_TESTS)
+    #only SST tests are using semaphore and thread APIs
+    install(FILES ${TFM_ROOT_DIR}/interface/include/os_wrapper/semaphore.h
+                  ${TFM_ROOT_DIR}/interface/include/os_wrapper/thread.h
+            DESTINATION export/tfm/include/os_wrapper)
+endif()
+
 embedded_project_end(tfm_non_secure_tests)
 embedded_project_end(tfm_secure_tests)
