--- a/secure_fw/services/tfm_service_list.inc.template
+++ b/secure_fw/services/tfm_service_list.inc.template
@@ -14,35 +14,46 @@
 #include "{{header}}"
 {% endfor %}
 
+/**************************************************************************/
+/** The service list */
+/**************************************************************************/
+struct tfm_spm_service_t service[] =
+{
 {% for manifest in manifests %}
     {% if manifest.attr.tfm_partition_ipc %}
         {% if manifest.manifest.services %}
             {% if manifest.attr.conditional %}
 #ifdef {{manifest.attr.conditional}}
             {% endif %}
-/******** {{manifest.manifest.name}} ********/
+    /******** {{manifest.manifest.name}} ********/
             {% for service in manifest.manifest.services %}
-{{'{'}}
-        "{{service.name}}",
-        {{manifest.manifest.name}}_ID,
-        {{service.signal}},
-        {{service.sid}},
+    {{'{'}}
+        .service_db = {
+            .name = "{{service.name}}",
+            .partition_id = {{manifest.manifest.name}}_ID,
+            .signal = {{service.signal}},
+            .sid = {{service.sid}},
                 {% if service.non_secure_clients is sameas true %}
-        true,
+            .non_secure_client = true,
                 {% else %}
-        false,
+            .non_secure_client = false,
                 {% endif %}
                 {% if service.minor_version %}
-        {{service.minor_version}},
+            .minor_version = {{service.minor_version}},
                 {% else %}
-        1,
+            .minor_version = 1,
                 {% endif %}
                 {% if service.minor_policy %}
-        TFM_VERSION_POLICY_{{service.minor_policy}}
+            .minor_policy = TFM_VERSION_POLICY_{{service.minor_policy}}
                 {% else %}
-        TFM_VERSION_POLICY_STRICT
+            .minor_policy = TFM_VERSION_POLICY_STRICT
                 {% endif %}
-{{'}'}},
+        },
+        .partition = NULL,
+        .handle_list = {0},
+        .msg_queue = {0},
+        .list = {0},
+    {{'}'}},
             {% endfor %}
             {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
@@ -51,4 +62,5 @@
 
     {% endif %}
 {% endfor %}
+};
 #endif /* __TFM_SERVICE_LIST_INC__ */
